[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/gui/minimap.png" type="Texture" id=1]
[ext_resource path="res://scripts/minimap.gd" type="Script" id=2]
[ext_resource path="res://art/gui/minimapcursor.png" type="Texture" id=3]
[ext_resource path="res://art/gui/foundwreck.png" type="Texture" id=4]
[ext_resource path="res://art/gui/foundportal.png" type="Texture" id=5]
[ext_resource path="res://art/gui/foundcluster.png" type="Texture" id=6]

[node name="minimap" type="TextureRect"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1300.0
margin_bottom = 867.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
stretch_mode = 0
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="cursor" type="Sprite" parent="." index="1"]

z_index = 1
texture = ExtResource( 3 )
_sections_unfolded = [ "Z Index" ]

[node name="wreck1" type="Sprite" parent="." index="2"]

visible = false
position = Vector2( 325, 195 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="wreck2" type="Sprite" parent="." index="3"]

visible = false
position = Vector2( 260, 542 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="wreck3" type="Sprite" parent="." index="4"]

visible = false
position = Vector2( 867, 260 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="wreck4" type="Sprite" parent="." index="5"]

visible = false
position = Vector2( 542, 325 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="wreck5" type="Sprite" parent="." index="6"]

visible = false
position = Vector2( 802, 607 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="foundportal" type="Sprite" parent="." index="7"]

visible = false
position = Vector2( 975, 650 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="foundcluster" type="Sprite" parent="." index="8"]

visible = false
position = Vector2( 715, 260 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


